actualizacón de contraseña

--- a/src/public/views/confirmacion.hbs
+++ b/src/public/views/confirmacion.hbs
@@ -25,8 +25,7 @@
                 <div class="ng-binding">
                     <div class="container">
                         <h6>
-                            Se a enviado un correo de confirmacion a {{email}}
-                                ya puede cerrar esta ventana 
+                            correo: {{msg.email}}*********{{msg.mensaje}}, 
                         </h6>
                     </div>            
                 </div>
