--- a/src/public/assets/style.css
+++ b/src/public/assets/style.css
@@ -38,3 +38,11 @@
     padding: 6px 25px 20px 25px;
     color: #c33;
 }
+
+input:invalid {
+    border-color: red;
+}
+
+input:valid {
+    border-color: rgb(75, 240, 88);
+}
