--- a/src/public/views/confirmacion.hbs
+++ b/src/public/views/confirmacion.hbs
@@ -14,7 +14,7 @@
 
 <style>
     .login-page {
-        background-image: url(/assets/bg.jpg);
+        background-image: url(/assets/bg.png);
     }
 </style>
 <body class="login-page">
@@ -23,17 +23,25 @@
             <img class="auth-logo" src="./assets/logo.png" alt="Streama Logo">
             <div class="inner">
                 <div class="ng-binding">
-                    <div class="container">
-                        <h6>
-                            correo: {{msg.email}}*********{{msg.mensaje}}, 
-                        </h6>
-                    </div>            
+                    <div class="jumbotron m-3 p-3" style="border-radius:22px; color: white; background-color:rgba(0, 0, 0, 0.5);">
+                            <h3 class="display-6">{{titulo}}</h3>
+                            <hr class="my-10" style="background-color: white;">
+                            <h6>{{mensaje}}</h6>
+                            <div class="container">
+                                <div class="row d-block">
+                                    <p style="color: rgb(16, 235, 9);">
+                                        {{advertencia}}
+                                    </p>
+                                </div>
+                                {{{boton}}}
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="footer">
-        <div class="version">v1.9.2</div>
+        <div class="version" style="color: transparent;">Alfonso González Zempoalteca</div>
     </div>
     <script type="text/javascript">
         (function() {
